--- a/styles.css
+++ b/styles.css
@@ -119,8 +119,8 @@ a:nth-child(2) {
 
     img {
         position: static;
-        object-fit: cover;
-        max-width: 90%;
+        height: auto;
+        width: 90%;
     }
 
     nav {
